--- a/log.css
+++ b/log.css
@@ -1,21 +1,49 @@
-form{
-    display: flex;
-    background-color: rgb(35, 6, 167);
+*{
+    margin: 0;
+    padding: 0;
 }
-form label{
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+h1{
+    text-align: center;
+    color: blueviolet;
+}
+form{
+    width: 20rem;
+    margin: 2em auto;
+    background-color: #0B2764;
+    padding: 5em;
+    color: aliceblue;
+}
+label{
     display: inline-block;
-    width: 15rem;
-    padding: 0.3rem;
-    background-color: azure;
-    margin-bottom: 0.3rem;
-    margin: 10px;
+    width: 7rem;
+    /* para a largura do label funcionar, precisa mudar o "display" para "inline-block" */
+}
+input{
+    width: 10rem;
+    height: 1.2rem;
+    border-radius: 1rem;
+    border: 1px solid rgb(182, 35, 9);
+    /* "border: none" tira a borda */
+}
+input[type="submit"]{
+    /* seleciona somente o input com o atributo type igual a "submit" */
+
+    margin-top: 1rem;
+    background-color: crimson;
+    padding: 0.5em 1rem;
+    color: white;
+    height: 2rem;
+}
+input[type='submit']:hover{
+    background-color: #00F6F7;
+    color: black;
 }
 body{
     background-image: url(imagens/deadcells-paisagem.webp);
     background-repeat: no-repeat;
     height: 100vh;
     background-size: cover;
-}
-main{
-    text-align: center;
 }
