--- a/main.css
+++ b/main.css
@@ -30,3 +30,15 @@ footer{
     background-color: cadetblue;
     text-align: center;
 }
+table{
+    border-collapse: collapse; 
+    margin: auto; 
+}
+tr:nth-child(even){
+
+    background-color: dodgerblue;
+}
+th, td{
+    border: 1px solid rgb(147, 187, 226);
+    padding: 0.5em;
+}
